[tool.poetry]
name = "currency_convector"
version = "0.1.0"
description = ""
authors = ["Vladislav Sviridov <v.sviridov.dev@gmail.com>"]

[tool.poetry.scripts]
curconv = "currency_convector.scripts.curconv:main"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.27.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
